updated name to index.html

--- a/cart page.html
+++ b/cart page.html
@@ -270,7 +270,7 @@
             <div class="navigation-bar">
                 <ul>
                     
-                    <li onclick="window.location.href='main.html'";><a href="#" ></a >Home</a></li>
+                    <li onclick="window.location.href='index.html'";><a href="#" ></a >Home</a></li>
                     <li onclick="window.location.href='Blog page.html'";><a href="#">Blog</a></li>
                     <li onclick="window.location.href='sign in page.html'";><a href="#">Sign in</a></li>
                     <div class="left-navigation">
