--- a/favourites page.html
+++ b/favourites page.html
@@ -97,7 +97,7 @@
                 align-items: center;
                 margin: 0 20px;
                 gap: 1rem;
-                width: 15%%;
+                width: 15%;
                 max-height: 350px;
                 min-width: 135px;
                 padding: 0 12px;
@@ -199,7 +199,7 @@
             justify-content: center;
             align-items: center;
             margin-left: 47px;
-            width: 15%%;
+            width: 15%;
             max-height: 300px;
             min-width: 180px;
             padding: 0 12px;
