--- a/search page.html
+++ b/search page.html
@@ -153,7 +153,7 @@
     <form class="search-bar">
         <i class='bx bx-search'></i> 
         <input type="search" placeholder="Search...">
-        <i class='bx bx-x' id="close-window" onclick="window.location.href='main.html'";></i>
+        <i class='bx bx-x' id="close-window" onclick="window.location.href='index.html'";></i>
     </form>
     <h2 class="popular">Popular</h2>
     <hr>
