--- a/sign in page.html
+++ b/sign in page.html
@@ -238,7 +238,7 @@
         <nav>
             <div class="navigation-bar">
                 <ul>
-                    
+                    <li onclick="window.location.href='index.html'";><a href="#">Home</a></li>
                     <li onclick="window.location.href='Blog page.html'";><a href="#">Blog</a></li>
                     <li onclick="window.location.href='sign in page.html'";><a href="#">Sign in</a></li>
                     <div class="left-navigation">
