--- a/cart page.html
+++ b/cart page.html
@@ -18,7 +18,7 @@
             align-items: center;
             margin: 0 20px;
             gap: 1rem;
-            width: 15%%;
+            width: 15%;
             max-height: 350px;
             min-width: 180px;
             padding: 0 12px;
