--- a/favourites page.html
+++ b/favourites page.html
@@ -11,10 +11,11 @@
             body::before {
             content: '';
             position: relative;
-            * {
+          
+            }
+            *{
                 padding: 0;
                 margin: 0;
-            }
             }
             body::after {
             content: '';
@@ -331,7 +332,7 @@
         <div class="navigation-bar">
             <ul>
                 
-                <li onclick="window.location.href='main.html'";><a href="#" ></a >Home</a></li>
+                <li onclick="window.location.href='index.html'";><a href="#" ></a >Home</a></li>
                       <li onclick="window.location.href='Blog page.html'";><a href="#">Blog</a></li>
                 <li onclick="window.location.href='sign in page.html'";><a href="#">Sign in</a></li>
                 <div class="left-navigation">
