--- a/search page.html
+++ b/search page.html
@@ -185,9 +185,9 @@
                 </ul>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'"; >
+                <div class="product-box" >
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -200,9 +200,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -213,9 +213,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -226,9 +226,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -241,9 +241,9 @@
         </tr>
         <tr>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -254,9 +254,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -267,9 +267,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -280,9 +280,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -295,9 +295,9 @@
         </tr>
         <tr>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -310,9 +310,9 @@
             </td>
             <td>
                 
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img">
+                        <img src="images/7.jpg" class="gallery-img">  onclick="window.location.href='single product page.html'";
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -324,9 +324,9 @@
             </td>
             <td>
                 
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img1">
+                        <img src="images/7.jpg" class="gallery-img1"  onclick="window.location.href='single product page.html'";>
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -337,9 +337,9 @@
                 </div>
             </td>
             <td>
-                <div class="product-box"  onclick="window.location.href='single product page.html'";>
+                <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="images/7.jpg" class="gallery-img2">
+                        <img src="images/7.jpg" class="gallery-img2"  onclick="window.location.href='single product page.html'";>
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
