--- a/favourites page.html
+++ b/favourites page.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favourites</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href='favourite.css' rel='stylesheet'>
+    <link href='css/favourite.css' rel='stylesheet'>
+    
+   
     <style>
         .product-box {
             width: 80px;
