--- a/Each type/Adidas.html
+++ b/Each type/Adidas.html
@@ -193,7 +193,6 @@
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
                             <span></span>
-                                <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
                             <button class="add-cart">Add to cart</button>
                            
                         </div>
@@ -207,7 +206,6 @@
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
-                                <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -220,7 +218,6 @@
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
-                                <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -232,62 +229,7 @@
                         <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
-                            <button class="add-cart">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="product-box">
-                    <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
-                        <div class="description">
-                            <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
-                            <button class="add-cart">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="product-box">
-                    <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
-                        <div class="description">
-                            <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
-                            <button class="add-cart">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="product-box">
-                    <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
-                        <div class="description">
-                            <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
-                            <button class="add-cart">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="product-box">
-                    <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
-                        <div class="description">
-                            <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
+                            <p>KSH 4000</p
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -301,8 +243,57 @@
                         <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
+                            <p>KSH 4000</p
+                            <button class="add-cart">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product-box">
+                    <div class="gallery_item_1">
+                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <div class="description">
+                            <span>NIKE SHOES</span>
+                            <p>KSH 4000</p
+                            <button class="add-cart">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product-box">
+                    <div class="gallery_item_1">
+                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <div class="description">
+                            <span>NIKE SHOES</span>
+                            <p>KSH 4000</p
+                            <button class="add-cart">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product-box">
+                    <div class="gallery_item_1">
+                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <div class="description">
+                            <span>NIKE SHOES</span>
+                            <p>KSH 4000</p
+                            <button class="add-cart">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="product-box">
+                    <div class="gallery_item_1">
+                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <div class="description">
+                            <span>NIKE SHOES</span>
+                            <p>KSH 4000</p
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -316,8 +307,7 @@
                         <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p>
-                            <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
+                            <p>KSH 4000</p
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -331,7 +321,7 @@
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
-                                 <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
+
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -344,7 +334,7 @@
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
-                                 <span id="change"><i class='bx bx-heart' id="fav-icon"></i></span>
+
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
