--- a/Each type/Adidas.html
+++ b/Each type/Adidas.html
@@ -188,7 +188,7 @@
             <td>
                 <div class="product-box" >
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_0b11084bbe2a4004bc9360306b890e04.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -202,7 +202,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_1cb3f90576734931927de80b4519e35f.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -214,7 +214,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_2c987864cf8448999d3a398bd9e6825f.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -226,10 +226,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_50134b5eaa8e4f06b3ff53183d5ba561.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -240,10 +240,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_518b3e86970e4e8e8ff0aea8a0894e3a.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -252,10 +252,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_5e35240236704a01b1164c93df934d5f.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -264,10 +264,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_5f20b9978dd3495ca8fc74b2ec760d2b.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -276,10 +276,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_60c95e8a9ae34f0db183921126fd26e6.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -290,10 +290,10 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_692f12fb96ca4f809482f77fca2c4b16.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -304,10 +304,10 @@
                 
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_6ae1712d61dd4791b6ae11c0c630b86d.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
-                            <p>KSH 4000</p
+                            <p>KSH 4000</p>
                             <button class="add-cart">Add to cart</button>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                 
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img1" onclick="window.location.href='single product page.html'";  >
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_6ae838c28c504cabaa7cdcf7417b144c.jpg" class="gallery-img1" onclick="window.location.href='single product page.html'";  >
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -330,7 +330,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img2"  onclick="window.location.href='single product page.html'";>
+                        <img src="/images/golden shoe back up/ADIDAS/254748772090_status_6f81394b4d4540fb99a6ca92827365e2.jpg" class="gallery-img2"  onclick="window.location.href='single product page.html'";>
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
