--- a/Each type/Nike.html
+++ b/Each type/Nike.html
@@ -187,7 +187,7 @@
             <td>
                 <div class="product-box" >
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254720418954_status_ac3904a3f56a4f5e942b6529a413849d.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -202,7 +202,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254725373882_status_468705cff88a458cbff42c4c1a55b86e.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -215,7 +215,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254725373882_status_bf05be6cd9644555a780cfa0bd8b4e17.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -228,7 +228,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254741505018_status_3ddadfb9383e4ed6ad58b69de0c7489b.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -243,7 +243,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254741505018_status_8d59255893224cdaa5427c87253ce47e.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -256,7 +256,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254741505018_status_c993c43756114125ad00b7e08dcbef84.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -269,7 +269,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254741505018_status_d743f84ce84c4a74820215c90e3351fd.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -282,7 +282,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254741505018_status_ff88f1ea1ea74baa88493652d8e4e6d0.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -297,7 +297,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254748772090_status_0020350098564e93a89e3bf991d1ee9e.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -312,7 +312,7 @@
                 
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
+                        <img src="/images/golden shoe back up/air Max/254748772090_status_09450ad70b2f40b8b5eb362165d5f26e.jpg" class="gallery-img" onclick="window.location.href='single product page.html'";>  
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -326,7 +326,7 @@
                 
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img1" onclick="window.location.href='single product page.html'";  >
+                        <img src="/images/golden shoe back up/air Max/254748772090_status_09450ad70b2f40b8b5eb362165d5f26e.jpg" class="gallery-img1" onclick="window.location.href='single product page.html'";  >
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
@@ -339,7 +339,7 @@
             <td>
                 <div class="product-box">
                     <div class="gallery_item_1">
-                        <img src="/images/3.jpg" class="gallery-img2"  onclick="window.location.href='single product page.html'";>
+                        <img src="/images/golden shoe back up/air Max/254748772090_status_0bb81b720efd4176b3ae7f6e255fd210.jpg" class="gallery-img2"  onclick="window.location.href='single product page.html'";>
                         <div class="description">
                             <span>NIKE SHOES</span>
                             <p>KSH 4000</p>
