--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <span>ADIDAS SHOCK BLADES</span>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, ea.</p>
                     <p>KSH 3800</p>
-                    <p id="change"><i class='bx bx-heart' id="fav-icon"></i></p>
-                    <button class="add-cart">Add to cart</button>
+                    <p class="change"><i class='bx bx-heart' id="fav-icon"></i></p>
+                    <button onclick="window.location.href='cart page.html'"; class="add-cart">Add to cart</button>
                 </div>
                 <div class="close-zoomed-icon" onclick="closeFullImg()">X</div>
 
